--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -73,6 +73,9 @@
     }
   }
   .media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     & > div {
       &:only-child {
         width: 100%;
