--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -20,7 +20,7 @@ $color-lightpurple: #9b58ea;
 $color-mediumpurple: #6e0bdc;
 
 .bg-paleblue {
-  background-color: $color-paleblue;
+  background-color: #f0f6ff; // $color-paleblue: not pale enough...;
 }
 .bg-lightblue {
   background-color: $color-lightblue;
