--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -4,7 +4,7 @@ $touch: $desktop - 1px;
 $tablet: 768px;
 $mobile: 480px;
 $fullhd: 1920px;
-$narrow: 640px;
+$very-narrow: 580px;
 $medium: 1366px;
 $wide: $fullhd;
 
