check that navigation links work, changes to navbar transparency switch logic

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -217,6 +217,13 @@
       }
     }
   }
+  &.hasDropdownIsActive {
+    & > a {
+      &:after {
+        transform: rotateX(180deg);
+      }
+    }
+  }
 
   // Mobile toggleable styles
   .dropdownActive {
