various small changes according to WCAG 2.1 level AA

--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -3,7 +3,7 @@
 
 .blogCard {
   height: 22.5vh;
-  min-height: 300px;
+  min-height: 18.75rem;
   border-radius: 1rem;
   box-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
   background-color: $color-white;
@@ -12,7 +12,7 @@
   justify-content: flex-end;
   @include touch() {
     .image {
-      max-height: 360px;
+      max-height: 22.5rem;
     }
   }
 
