--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -18,7 +18,7 @@
   }
   @include desktop() {
     height: 100%;
-    min-height: 340px;
+    min-height: 21.25rem;
     overflow: hidden;
     position: relative;
     & > * {
