--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -30,7 +30,7 @@
         display: flex;
         flex-direction: column;
         font-weight: 600;
-        font-size: 1.25rem;
+        font-size: 1.25em;
         padding-left: unset;
         padding-right: unset;
         border: unset;
