--- a/components/agility-pageModules/awardsPageContent/awardsPageContent.module.scss
+++ b/components/agility-pageModules/awardsPageContent/awardsPageContent.module.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/settings/colors";
 
 .awardsPageContent {
-  max-width: 500px;
+  max-width: 31.25rem;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -24,8 +24,8 @@
       div {
         width: 100%;
         height: 100%;
-        max-height: 120px;
-        min-height: 120px;
+        max-height: 7.5rem;
+        min-height: 7.5rem;
 
         img {
           min-width: unset !important;
