--- a/components/agility-pageModules/contentList/contentList.module.scss
+++ b/components/agility-pageModules/contentList/contentList.module.scss
@@ -23,7 +23,7 @@
       align-items: center;
       .contentItem {
         width: calc(33% - 30px);
-        min-width: 340px;
+        min-width: 21.25rem;
       }
     }
     @include mobile() {
