--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -29,7 +29,7 @@
     }
   }
   .heading {
-    max-width: 600px;
+    max-width: 37.5rem;
   }
   .textContent {
     display: flex;
@@ -85,7 +85,7 @@
   width: 100vw;
   padding: unset;
   height: 100%;
-  min-height: 300px;
+  min-height: 18.75rem;
   position: relative;
   display: flex;
   align-items: center;
@@ -116,7 +116,7 @@
     margin-bottom: 8em;
     transform: translate(-50%, 70%);
     padding: 2.5rem 2rem 3rem 2rem;
-    box-shadow: 4px 4px 20px hsla(0, 0%, 49.8%, 0.15);
+    box-shadow: 0.25rem 0.25rem 1.25rem hsla(0, 0%, 49.8%, 0.15);
     background-color: $color-white;
     text-align: center;
     z-index: 1;
@@ -179,7 +179,7 @@
 
   // resets for large screen sizes
   @include desktop() {
-    min-height: 375px;
+    min-height: 23.4375rem;
     .backgroundImage {
       & > * {
         display: block !important;
@@ -265,8 +265,8 @@
     .testimonialIcon {
       position: absolute;
       padding: 1rem;
-      max-width: 80px;
-      max-height: 80px;
+      max-width: 5rem;
+      max-height: 5rem;
       background-color: $color-darkblue;
       border-radius: 50%;
       top: 0;
@@ -294,8 +294,8 @@
     }
     .testimonialImage {
       padding: 1rem;
-      max-width: 125px;
-      max-height: 125px;
+      max-width: 7.8125rem;
+      max-height: 7.8125rem;
       overflow: hidden;
       & > div {
         &:only-child {
