--- a/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
+++ b/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
@@ -26,15 +26,16 @@
       display: flex;
       margin-bottom: 1rem;
       & > div {
-        &:first-child {
-          border-radius: 50%;
-          img {
-            max-width: 263px !important;
-            min-width: unset !important;
-            width: unset !important;
-            height: unset !important;
-            object-fit: cover;
-          }
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+        max-width: 16.4375rem !important;
+        max-height: 16.4375rem !important;
+        img {
+          min-width: 100% !important;
+          width: unset !important;
+          height: unset !important;
+          object-fit: cover;
         }
       }
       .leaderImageFilter {
@@ -59,7 +60,7 @@
           transform: translate(-50%, -50%);
           padding: 0.5rem;
           width: 100%;
-          max-width: 145px;
+          max-width: 9.0625rem;
           border: 0.2rem solid $color-white;
           color: $color-white;
           border-radius: 3rem;
