--- a/components/layout/globalMessage/globalMessage.module.scss
+++ b/components/layout/globalMessage/globalMessage.module.scss
@@ -38,7 +38,7 @@
     right: -1rem;
     top: 50%;
     transform: translateY(-50%);
-    a {
+    button {
       padding: 1rem;
       &:before {
         content: "\00d7";
