--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -112,6 +112,9 @@
 .align-items-center {
   align-items: center !important;
 }
+.align-items-unset {
+  align-items: unset !important;
+}
 
 /*
   <<<<<<<<<<<<<<<<GRID LAYOUT CLASSES>>>>>>>>>>>>>>>>>
