--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
 @import "typography";
 @import "marketo";
 @import "layout";
+@import "animations";
 @import "./components/__components-dir";
 @import "./agility-pageModules/__agility-pageModules-dir";
 @import "./settings/reset";
