--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -105,6 +105,10 @@
     padding: 3.5rem 1.5rem;
   }
   &.testimonialComment {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .testimonialIcon {
       position: absolute;
       padding: 1rem;
@@ -112,9 +116,7 @@
       max-height: 80px;
       background-color: $color-darkblue;
       border-radius: 50%;
-      top: 0;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: -2rem;
       svg {
         width: 100%;
         height: 100%;
