--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -22,63 +22,48 @@
   opacity: 0;
   transform: scale(1.2);
   animation: 1s scaleIn forwards;
-  &:nth-child(1) {
-    animation-delay: 0.1s;
-  }
-  &:nth-child(2) {
-    animation-delay: 0.3s;
-  }
-  &:nth-child(3) {
-    animation-delay: 0.5s;
-  }
-  &:nth-child(4) {
-    animation-delay: 0.7s;
-  }
-  &:nth-child(5) {
-    animation-delay: 0.9s;
-  }
-  &:nth-child(6) {
-    animation-delay: 1.1s;
-  }
-  &:nth-child(7) {
-    animation-delay: 1.3s;
-  }
-  &:nth-child(8) {
-    animation-delay: 1.5s;
-  }
 }
 .scaleOut {
   opacity: 0;
   transform: scale(0.8);
   animation: 1s scaleOut forwards;
-  &:nth-child(1) {
-    animation-delay: 0.1s;
-  }
-  &:nth-child(2) {
-    animation-delay: 0.3s;
-  }
-  &:nth-child(3) {
-    animation-delay: 0.5s;
-  }
-  &:nth-child(4) {
-    animation-delay: 0.7s;
-  }
-  &:nth-child(5) {
-    animation-delay: 0.9s;
-  }
-  &:nth-child(6) {
-    animation-delay: 1.1s;
-  }
-  &:nth-child(7) {
-    animation-delay: 1.3s;
-  }
-  &:nth-child(8) {
-    animation-delay: 1.5s;
-  }
 }
 .bounceIn {
   opacity: 0;
   animation: 1s bounceIn alternate;
   animation-delay: 0.1s;
   animation-fill-mode: both;
+}
+
+.slideInFromTop,
+.slideInFromBottom,
+.slideInFromRight,
+.slideInFromLeft,
+.scaleIn,
+.scaleOut,
+.bounceIn {
+  &:nth-child(1) {
+    animation-delay: 0.2s;
+  }
+  &:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  &:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  &:nth-child(4) {
+    animation-delay: 0.8s;
+  }
+  &:nth-child(5) {
+    animation-delay: 1s;
+  }
+  &:nth-child(6) {
+    animation-delay: 1.2s;
+  }
+  &:nth-child(7) {
+    animation-delay: 1.4s;
+  }
+  &:nth-child(8) {
+    animation-delay: 1.6s;
+  }
 }
